sentimentchart/templates/destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app
spec:
  host: app-serv
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: model-service
spec:
  host: model-service-serv
  subsets:
    - name: v1
      labels:
        version: v1
    - name: test
      labels:
        version: test
