sentimentchart/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-serv
                port:
                  number: 8081
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: app-serv
                port:
                  number: 8081
          - path: /predict
            pathType: Prefix
            backend:
              service:
                name: app-serv
                port:
                  number: 8081
    - host: grafana.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myprom-grafana
                port:
                  number: 80
