sentimentchart/templates/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-entry-service
spec:
  gateways:
    - my-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /predict
        - uri:
            prefix: /metrics
        - uri:
            prefix: /
      route:
        - destination:
            host: app-serv
            subset: v1
          weight: 50
        - destination:
            host: app-serv
            subset: v2
          weight: 50
